command-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: command-pod
  name: command-pod
spec:
  containers:
  - image: nginx
    name: command-pod
    command: [/bin/sh, -c, i=0; while true; do echo INFO $i $(date); i=$((i+1)); sleep 1; done]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
