daemonset-1.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: daemonset-1
  name: daemonset-1
spec:
  selector:
    matchLabels:
      app: daemonset-1
  template:
    metadata:
      labels:
        app: daemonset-1
    spec:
      containers:
      - image: nginx
        name: nginx
