deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-1
  name: deployment-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-1
  strategy: {}
  template:
    metadata:
      labels:
        app: deployment-1
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
