emptydir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: emptydir-pod
  name: emptydir-pod
spec:
  containers:
  - image: nginx
    name: emptydir-pod
    resources: {}
    volumeMounts:
    - mountPath: /cache
      name: scratchpad
  volumes:
  - name: scratchpad
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
