liveness-probe-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: liveness-probe-pod
  name: liveness-probe-pod
spec:
  containers:
  - image: nginx
    name: liveness-probe-pod
    livenessProbe:
      httpGet:
        path: /
        port: 80
      failureThreshold: 3
      periodSeconds: 10
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
