mars-sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mars-sa-pod
  name: mars-sa-pod
  namespace: mars
spec:
  containers:
  - command: [/bin/sh, -c, tail -f /dev/null]
    image: busybox
    name: mars-pod4
    resources: {}
  serviceAccountName: mars-viewer
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
