newpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: newpod
  name: newpod
spec:
  containers:
  - image: nginx
    name: newpod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
