pod8080-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: port8080-pod
  name: port8080-pod
spec:
  containers:
  - image: nginx
    name: port8080-pod
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
