pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
labels:
    run: pvc-pod
  name: pvc-pod
spec:
  containers:
  - image: nginx
    name: pvc-pod
    resources: {}
    volumeMounts:
    - mountPath: /data
      name: persistent-volume
  volumes:
  - name: persistent-volume
    persistentVolumeClaim: 
      claimName: pvc-3g-rwx
