startup-probe-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: startup-probe-pod
  name: startup-probe-pod
spec:
  containers:
  - image: nginx
    name: startup-probe-pod
    startupProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      timeoutSeconds: 4
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
