nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-v2-svc
  name: app-v2-svc
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: app-v2-svc
  type: NodePort
status:
  loadBalancer: {}
